client/secureStorage-test.txt

> zen-gomoku-client@2.0.0 test
> vitest src/utils/__tests__/secureStorage.test.ts


[1m[44m DEV [49m[22m [34mv4.0.17 [39m[90mE:/GitHub/zen-gomoku-game/client[39m

stderr | src/utils/__tests__/secureStorage.test.ts > secureStorage > ?èˆªç‚Š?îŸ¡? > JSON é–«??æ†­æœ›??î¿™?é–°è„°???null
SecureStorage.getJSON error: SyntaxError: Unexpected token 'o', "not a json string" is not valid JSON
    at JSON.parse (<anonymous>)
    at SecureStorage.getJSON (E:/GitHub/zen-gomoku-game/client/src/utils/secureStorage.ts:77:25)
    at E:/GitHub/zen-gomoku-game/client/src/utils/__tests__/secureStorage.test.ts:146:42
    at file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:145:11
    at file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:915:26
    at file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:1243:20
    at new Promise (<anonymous>)
    at runWithTimeout (file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:1209:10)
    at file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:1653:37
    at Traces.$ (file:///E:/GitHub/zen-gomoku-game/client/node_modules/vitest/dist/chunks/traces.CCmnQaNT.js:142:27)

stderr | src/utils/__tests__/secureStorage.test.ts > secureStorage > ?å¯??ï†°? > ?ï¦åºœç”‡?â…¡?îŸ¡? undefined
SecureStorage.getJSON error: SyntaxError: Unexpected token 'U', "U2FsdGVkX1"... is not valid JSON
    at JSON.parse (<anonymous>)
    at SecureStorage.getJSON (E:/GitHub/zen-gomoku-game/client/src/utils/secureStorage.ts:77:25)
    at E:/GitHub/zen-gomoku-game/client/src/utils/__tests__/secureStorage.test.ts:207:42
    at file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:145:11
    at file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:915:26
    at file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:1243:20
    at new Promise (<anonymous>)
    at runWithTimeout (file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:1209:10)
    at file:///E:/GitHub/zen-gomoku-game/client/node_modules/@vitest/runner/dist/index.js:1653:37
    at Traces.$ (file:///E:/GitHub/zen-gomoku-game/client/node_modules/vitest/dist/chunks/traces.CCmnQaNT.js:142:27)

 [31m??[39m src/utils/__tests__/secureStorage.test.ts [2m([22m[2m28 tests[22m[2m | [22m[31m2 failed[39m[2m)[22m[32m 68[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?îº??ï—½åœ¾æ’–ï‰Œ?éŠ?[32m 5[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?îŸ¡? JSON éˆï‹ª?[32m 1[2mms[22m[39m
       [32m??[39m éŠïš—??å‡½? key ?ï¦åºœé¤ˆî‚? null[32m 0[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?èŠ·î¨’?ï†±î­–[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœçšœï†³î¨’?Â€?ï§???[32m 1[2mms[22m[39m
       [32m??[39m hasItem ?ï¦åºœç”‡?â…¡ç‘¼ï¼¸î·?ï†±î­–?è‡¬î’æ‘®î¦¶î¯­[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœé¤ˆî‚??Â€?ï§ï™§[32m 2[2mms[22m[39m
[31m       [31m?[31m ?ï¦åºœ?ç‘å®?èŠ¸?æ’–ï‰?éˆï‹ª?[39m[32m 7[2mms[22m[39m
       [32m??[39m æ’Œè„£?æ’–ï‰?éˆï‹ª?éŠïš˜?é–°è„°â—¤?ïšš??ç‘å®[32m 2[2mms[22m[39m
       [32m??[39m éŠïš—??å‡½? key ?ç‘å®?î¿—??ï¦åºœ?æ¢¢ï—„[32m 1[2mms[22m[39m
       [32m??[39m é–«??æ†­æœ›??î¿™?é–°è„°??îµ¤?æ†ªï• ??î©??îµ¨Â€Â€ç’ˆî¸ï—åš—?[32m 1[2mms[22m[39m
       [32m??[39m JSON é–«??æ†­æœ›??î¿™?é–°è„°???null[32m 3[2mms[22m[39m
       [32m??[39m setItem ?èˆªç‚Š?î¿—??ï¦åºœ?ï•ïŠ¾?å•£è™œ[32m 1[2mms[22m[39m
[31m       [31m?[31m ?ï¦åºœç”‡?â…¡?îŸ¡?è›ç®?éŠ?[39m[32m 3[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?îŸ¡??å¯?æ‘®î¤›æ³µ[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?îŸ¡??è©¨?[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?îŸ¡?æ’£ï¶???[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?îŸ¡? null ??[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?îŸ¡? undefined[32m 2[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?îŸ¡??ç‘•?éŠ?[32m 15[2mms[22m[39m
       [32m??[39m ?ï¦åºœç”‡?â…¡?îŸ¡?éŠ´ï‹­??ï„’?æ†Ÿî¤™?éŠ?[32m 2[2mms[22m[39m
       [32m??[39m ?è©¨??ï„’Â€æ½­?é–°è„©î›¿?î¸€??ï—¼??îº?è¯î“?åš—ï…è™?åˆ¸îª³ç’ˆ?IVåš—?[32m 6[2mms[22m[39m
       [32m??[39m ?îº?æ•ºï—¼?éˆï‹ª??ï¦åºœ?âŠ¥??æ¹”î”éœˆÂ€??[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœ?è³¢ï³æ’±ç®¸î¡‡??SecureStorage æ’–è™«?[32m 1[2mms[22m[39m
       [32m??[39m éŠïš—?æ’–è™«??ï¦åºœ?æ›¹æ¾ˆ localStorage[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœ?è³¢??è„£?éœˆÂ€?î¡½ï ??ID[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœ?è³¢??è„£?éœˆÂ€?î¡¾îœ…?å—…?æ†Ÿè³ªèº«æ‘°?[32m 1[2mms[22m[39m
       [32m??[39m ?ï¦åºœ?è³¢??è„£?éœˆÂ€?î¢€??è„©???[32m 1[2mms[22m[39m

?èƒ¼î?èƒ¼î?èƒ¼î??[39m Failed Tests 2 ?èƒ¼î?èƒ¼î?èƒ¼î??[39m

 FAIL  src/utils/__tests__/secureStorage.test.ts > secureStorage > éˆï‹ª??ç‘å® > ?ï¦åºœ?ç‘å®?èŠ¸?æ’–ï‰?éˆï‹ª?
AssertionError: expected 'unencrypted value' not to be 'unencrypted value' // Object.is equality
 ??[22m src/utils/__tests__/secureStorage.test.ts:109:34
    107|             // ?æ›‰î¯­?ï¦åºœ?è‡¬?æ’–ï‰?åš—ï…??èˆ€??ï‹³?
    108|             const rawValue = localStorage.getItem('oldData');
    109|             expect(rawValue).not.toBe(unencryptedValue);
       |                                  ^
    110|         });
    111| 

?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î[1/2]??[22m

 FAIL  src/utils/__tests__/secureStorage.test.ts > secureStorage > ?å¯??ï†°? > ?ï¦åºœç”‡?â…¡?îŸ¡?è›ç®?éŠ?AssertionError: expected 'U2FsdGVkX1+PBZyRu1fzIeiq7VXlUtBZ+hxbD?? to be '' // Object.is equality

- Expected
+ Received

+ U2FsdGVkX1+PBZyRu1fzIeiq7VXlUtBZ+hxbDaww8CY=

 ??[22m src/utils/__tests__/secureStorage.test.ts:171:27
    169|             const value = secureStorage.getItem('empty');
    170| 
    171|             expect(value).toBe('');
       |                           ^
    172|         });
    173| 

?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î?èƒ¼î[2/2]??[22m


[2m Test Files [22m [1m[31m1 failed[39m[22m[90m (1)[39m
[2m      Tests [22m [1m[31m2 failed[39m[22m[2m | [22m[1m[32m26 passed[39m[22m[90m (28)[39m
[2m   Start at [22m 08:55:44
[2m   Duration [22m 1.15s[2m (transform 84ms, setup 199ms, import 80ms, tests 68ms, environment 636ms)[22m

[1m[41m FAIL [49m[22m [31mTests failed. Watching for file changes...[39m
       [2mpress [22m[1mh[22m[2m to show help[22m[2m, [22m[2mpress [22m[1mq[22m[2m to quit[22m
[31mCancelling test run. Press CTRL+c again to exit forcefully.
[39m
